syntax = "proto3";

package account;

import "google/protobuf/timestamp.proto";

message Account {
  string id = 1;
  string email = 2;
  string username = 3;
  bool is_admin = 4;
  google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp last_login_at = 6;
}

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  bool is_admin = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string jwt = 1;
  google.protobuf.Timestamp jwt_expires = 2;
  string jwt_refresh = 3;
  google.protobuf.Timestamp jwt_refresh_expires = 4;
}

message RefreshRequest {
  string jwt_refresh = 1;
}

message FindAccountRequest {
  optional string id = 1;
  optional string email = 2;
}

service AccountService {
  rpc Register (RegisterRequest) returns (Account) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Refresh (RefreshRequest) returns (LoginResponse) {}
  rpc FindAccount(FindAccountRequest) returns (Account) {}
}
